Bug 318907 - kdeinit4 crashing after logon
Summary: kdeinit4 crashing after logon
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: kded (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
: 319005 319051 319108 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-26 08:23 UTC by gpe
Modified: 2013-05-08 16:03 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0
Sentry Crash Report:


Attachments
Crash report (112.83 KB, application/octet-stream)
2013-04-26 08:23 UTC, gpe
Details
Output of kscreen-console bug (8.87 KB, application/octet-stream)
2013-04-26 14:35 UTC, gpe
Details
KCrash report (15.30 KB, application/octet-stream)
2013-04-26 17:19 UTC, Christian Bayer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gpe 2013-04-26 08:23:19 UTC
After update from kubuntu 12.10 to 13.04 kdeinit4 crashes on every start when when plasma appears.
On 12.10 I was using kde 4.10.2 from the backports.

Reproducible: Always

Steps to Reproduce:
1. Update to kubuntu 13.04
2. Reboot

Actual Results:  
kdeinit4 crashes.

Expected Results:  
kdeinit4 wont crash

I was not able to use the crash reporting assistant as I was not able to login.
(Failed to communicate with kded. Make sure it is running.)
Qt: 4.8.4
KDE Development Platform: 4.10.2
DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=13.04
DISTRIB_CODENAME=raring
DISTRIB_DESCRIPTION="Ubuntu 13.04"
Comment 1 gpe 2013-04-26 08:23:52 UTC
Created attachment 79455 [details]
Crash report
Comment 2 Christoph Feck 2013-04-26 13:48:49 UTC
Reassigning to kscreen developers, because of the crash KScreen::Output::id.

There is, however, some wiredness going on with "kded_colord.so", most certainly using synchronous D-Bus calls.

I thought we were pretty clear that synchronous D-Bus call are a no-go in a kded module. Adding colord maintainer.
Comment 3 Daniel Vrátil 2013-04-26 14:12:24 UTC
Are you running a laptop, or a workstation? Could you please provide output from "kscreen-console bug" ?
Comment 4 gpe 2013-04-26 14:35:20 UTC
Created attachment 79465 [details]
Output of kscreen-console bug

I am running laptop with nvidia driver (304.88). Please find the kscreen-console bug output attached.
Comment 5 Daniel Vrátil 2013-04-26 14:55:01 UTC
Git commit ffe2de800c74b4a927f194568511c813f9c5ffc7 by Dan Vrátil.
Committed on 26/04/2013 at 18:54.
Pushed by dvratil into branch 'master'.

Fix crash when embeddedOutput() fails to detect embedded output

Some laptops (probably older models) use 'VGA-*' to identify embedded
outputs, so embeddedOutput() will fail, because it only looks for
modern 'LVDS', 'EDP', etc. In such case, just try to use the output
with lowest ID. It's highly probably that it will be the right one.

We should also try to come up with some really reliable method, instead
of name-based guessing.
FIXED-IN: 1.0

M  +11   -2    kded/generator.cpp

http://commits.kde.org/kscreen/ffe2de800c74b4a927f194568511c813f9c5ffc7
Comment 6 Christian Bayer 2013-04-26 17:17:52 UTC
Same here. Exact same stacktrace. This is really a bummer because without KDED, *NOTHING* works. Also a laptop setup with proprietary nvidia-driver, KDED runs fine until I dock the laptop (and thus add an external monitor).
Comment 7 Christian Bayer 2013-04-26 17:19:13 UTC
Created attachment 79471 [details]
KCrash report

Oh, and this also happened after update to Ubuntu 13.04.
Comment 8 Daniel Vrátil 2013-04-28 12:36:28 UTC
*** Bug 319005 has been marked as a duplicate of this bug. ***
Comment 9 Alex Fiestas 2013-04-28 12:41:45 UTC
You can disable the "KScreen 2" kded from systemsettings-->startup and shutdown -->Services

Will try to fix asap.
Comment 10 Christian Bayer 2013-04-28 14:04:38 UTC
@Alex Fiestas: Thank you, I'll try that, but I think this will work for me. Thanks!
Comment 11 Alex Fiestas 2013-04-29 00:33:35 UTC
Got the solution figured out, will implement and try to release tomorrow.

Thanks and sorry for the mess :(
Comment 12 Daniel Vrátil 2013-04-29 12:25:47 UTC
*** Bug 319051 has been marked as a duplicate of this bug. ***
Comment 13 Daniel Vrátil 2013-04-30 11:28:43 UTC
*** Bug 319108 has been marked as a duplicate of this bug. ***
Comment 14 Alex Fiestas 2013-05-01 17:23:31 UTC
Forgot to close the bug, this has been fix in 0.0.92 (RC2)

Thanks for reporting !
Comment 15 gpe 2013-05-02 07:48:02 UTC
(In reply to comment #14)
> Forgot to close the bug, this has been fix in 0.0.92 (RC2)
> 
> Thanks for reporting !

Thanks for fixing it :)
Comment 16 Rohan Garg 2013-05-08 11:15:26 UTC
Hi
As part of the SRU process in Ubuntu we require testing of our packages before the package is released into Ubuntu.

The kscreen packages to be tested can be found here https://launchpad.net/~kubuntu-ppa/+archive/experimental

The SRU bug can be found here : https://bugs.launchpad.net/ubuntu/+source/kscreen/+bug/1177333
Comment 17 Rohan Garg 2013-05-08 11:36:40 UTC
Steps to add the PPA  on raring: 

sudo add-apt-repository ppa:kubuntu-ppa/experimental
sudo apt-get update
sudo apt-get install kscreen

Once done, please logout and login, and check if plasma still crashes.
Comment 18 stratic 2013-05-08 13:46:00 UTC
@Rohan: There is no more crash at startup with the experimental package. But kscreen did not works anymore with it...

In the system settings, the display configuration panel reports the following error:

   "No supported X Window system extension found"

kscreen-console reports the following:

START 
kscreen-console(9742) BackendLoader::init: No KScreen backend set! 
Config::current() took 0 milliseconds 
Config is invalid, probably backend couldn't load
Comment 19 Rohan Garg 2013-05-08 14:10:43 UTC
@stratic 
Could you paste the output of the command : apt-cache policy libkscreen0 kscreen
Comment 20 Rohan Garg 2013-05-08 14:14:29 UTC
I believe this is caused by having a older libkscreen0 , so please update libkscreen0 as well and then check if it still causes the issue.
Comment 21 stratic 2013-05-08 14:33:52 UTC
@Rohan

 libkscreen0 was not updated automatically after a simple :  "sudo apt-get install kscreen".

Now, after an explicit libkscreen0 update request, kscreen works properly.

Thank's you
Comment 22 Rohan Garg 2013-05-08 14:36:33 UTC
Ack. Minor packaging issue, will be uploading a fixed package to Ubuntu shortly :)
Comment 23 Jonathan Riddell 2013-05-08 16:01:25 UTC
stratic: can you also   sudo apt-get install libkscreen0  and test again?
Comment 24 Jonathan Riddell 2013-05-08 16:03:11 UTC
Ignore my last comment, I see you've done it already thanks :)